[package]
name = "shuttle-tokio"
version = "0.0.1"
edition = "2018"

[dependencies]
ansi_term = "~0.12.1"
bitvec = "~0.21.0"
futures = "~0.3.5"
generator = "~0.7.0"
hex = "~0.4.2"
rand_core = "~0.5.1"
rand = "~0.7.3"
rand_pcg = "~0.2.1"
scoped-tls = "~1.0.0"
smallvec = "~1.6.1"
shuttle = { path = "../shuttle", version = "*" }
test-env-log = { version = "~0.2.2", default-features = false, features = ["trace"] }
tokio = { version = "~1.7.0", features = ["full"] }
tracing = "~0.1.21"
tracing-subscriber = "~0.2.12"
varmint = "~0.1.3"

[dev-dependencies]
criterion = { version = "~0.3.4", features = ["html_reports"] }
proptest = "~0.10.1"
proptest-derive = "~0.2.0"
regex = "~1.3.9"
tempfile = "~3.2.0"
